--- a/src/AdrilBank.Services.Api/AdrilBank.Services.Api.csproj
+++ b/src/AdrilBank.Services.Api/AdrilBank.Services.Api.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>bf4cad15-1cb7-4bc9-98f0-002b8216b0a9</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
