--- a/src/AdrilBank.Domain/AdrilBank.Domain.csproj
+++ b/src/AdrilBank.Domain/AdrilBank.Domain.csproj
@@ -6,4 +6,16 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="MediatR" Version="12.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Bus\" />
+    <Folder Include="Commands\" />
+    <Folder Include="Models\" />
+    <Folder Include="Events\" />
+  </ItemGroup>
+
 </Project>
