--- a/src/AdrilBank.Infra.CrossCutting/AdrilBank.Infra.CrossCutting.csproj
+++ b/src/AdrilBank.Infra.CrossCutting/AdrilBank.Infra.CrossCutting.csproj
@@ -6,4 +6,18 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AdrilBank.Domain\AdrilBank.Domain.csproj" />
+    <ProjectReference Include="..\AdrilBank.Infra.Data\AdrilBank.Infra.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Identity\" />
+  </ItemGroup>
+
 </Project>
