--- a/src/AdrilBank.Infra.Data/AdrilBank.Infra.Data.csproj
+++ b/src/AdrilBank.Infra.Data/AdrilBank.Infra.Data.csproj
@@ -6,4 +6,17 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="EventSoursing\" />
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AdrilBank.Domain\AdrilBank.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
