--- a/src/AdrilBank.Domain/AdrilBank.Domain.csproj
+++ b/src/AdrilBank.Domain/AdrilBank.Domain.csproj
@@ -9,12 +9,11 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="MediatR" Version="12.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Bus\" />
     <Folder Include="Commands\" />
-    <Folder Include="Models\" />
     <Folder Include="Events\" />
   </ItemGroup>
 
