--- a/src/AdrilBank.Api/AdrilBank.Api.csproj
+++ b/src/AdrilBank.Api/AdrilBank.Api.csproj
@@ -6,15 +6,22 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>bf4cad15-1cb7-4bc9-98f0-002b8216b0a9</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AdrilBank.Infra.Data\AdrilBank.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
